# sol-rpc-canister

./: .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  cliff.toml  release-plz.toml  release_notes.md  taplo.toml  tomlfmt.toml
.github/: CODEOWNERS
.github/actions/cache-cargo/: action.yml
.github/repo_policies/: BOT_APPROVED_FILES
.github/scripts/: check_ninja_cargo_toml.py
.github/workflows/: ci.yml  deploy-rc.yml  publish.yml  release-plz.yml  release.yml
build-helpers/: Cargo.toml
build-helpers/src/: lib.rs
canister/: CHANGELOG.md  Cargo.toml  dfx.json  hidden_endpoints.conf  hidden_endpoints.txt  icp.yaml  sol_rpc_canister.did
canister/.icp/data/mappings/: ci.ids.json  prod.ids.json  staging.ids.json
canister/ci/: canister_ids.json
canister/prod/: canister_ids.json  provision-prod.sh
canister/prod/proposals/: 2025_06_13_sol_rpc_install.md  2025_08_08_sol_rpc_upgrade.md  2026_01_13_sol_rpc_upgrade.md  sol_rpc_install_2025_06_13.md
canister/proposals/: 2025_06_13_sol_rpc_install.md  2025_08_08_sol_rpc_upgrade.md  2025_09_12_sol_rpc_upgrade.md  2026_01_13_sol_rpc_upgrade.md
canister/scripts/: examples.sh  provision.sh
canister/src/: constants.rs  http.rs  lib.rs  main.rs  memory.rs  providers.rs  types.rs
canister/src/candid_rpc/: mod.rs
canister/src/http/: errors.rs  mod.rs
canister/src/lifecycle/: mod.rs
canister/src/logs/: mod.rs  tests.rs
canister/src/memory/: mod.rs  tests.rs
canister/src/metrics/: mod.rs
canister/src/providers/: mod.rs  tests.rs
canister/src/rpc_client/: mod.rs  tests.rs  types.rs
canister/src/rpc_client/cbor/: mod.rs  rounding_error.rs  tests.rs
canister/src/rpc_client/json/: mod.rs
canister/src/rpc_client/sol_rpc/: mod.rs  tests.rs
canister/src/state/: mod.rs  tests.rs
canister/src/types/: mod.rs  tests.rs
canister/src/util/: mod.rs  tests.rs
canister/src/validate/: mod.rs  tests.rs
canister/staging/: canister_ids.json  dfx.json
canlog/: Cargo.toml
canlog/src/: lib.rs
canlog_derive/: Cargo.toml
canlog_derive/src/: lib.rs
end_to_end_tests/: CHANGELOG.md  Cargo.toml
end_to_end_tests/src/: lib.rs
end_to_end_tests/tests/: end_to_end.rs
examples/basic_solana/: CHANGELOG.md  Cargo.toml  README.md  basic_solana.did  build.rs  canister_ids.json  dfx.json  helium_demo.json  ic.ipynb  icp.yaml  rust-toolchain.toml  solana.ipynb
examples/basic_solana/.cargo/: config.toml
examples/basic_solana/backend/: Cargo.toml  backend.did  ed25519.rs  lib.rs  solana_wallet.rs  state.rs
examples/basic_solana/backend/tests/: tests.rs
examples/basic_solana/local/: canister_ids.json  dfx.json
examples/basic_solana/mainnet/: dfx.json
examples/basic_solana/ninja/: Cargo.toml  basic_solana.did  dfx.json
examples/basic_solana/src/: ed25519.rs  lib.rs  main.rs  solana_rpc_canister.rs  solana_wallet.rs  spl.rs  state.rs
examples/basic_solana/tests/: tests.rs
integration_tests/: CHANGELOG.md  Cargo.toml  keypair1.json  keypair2.json
integration_tests/src/: lib.rs  mock.rs  spl.rs  wallet.rs
integration_tests/tests/: end_to_end.rs  solana_test_validator.rs  tests.rs
libs/client/: CHANGELOG.md  Cargo.toml  README.md  build.rs
libs/client/src/: ed25519.rs  lib.rs  tests.rs  threshold_sig.rs  threshold_signatures.rs
libs/client/src/fixtures/: mod.rs
libs/client/src/nonce/: mod.rs  tests.rs
libs/client/src/request/: mod.rs  tests.rs
libs/client/src/util/: spl.rs
libs/logs/: Cargo.toml  README.md
libs/logs/src/: lib.rs  tests.rs
libs/logs/src/types/: mod.rs
libs/types/: CHANGELOG.md  Cargo.toml  README.md
libs/types/src/: lib.rs  management_canister.rs  tests.rs
libs/types/src/lifecycle/: mod.rs
libs/types/src/regex/: mod.rs
libs/types/src/response/: mod.rs
libs/types/src/rpc_client/: mod.rs  tests.rs
libs/types/src/solana/: mod.rs  tests.rs
libs/types/src/solana/account/: mod.rs
libs/types/src/solana/request/: mod.rs  tests.rs
libs/types/src/solana/signature/: mod.rs
libs/types/src/solana/transaction/: error.rs  instruction.rs  mod.rs  reward.rs
scripts/: build  docker-build
