[workspace]
resolver = "2"
members = [
    "canister",
    "end_to_end_tests",
    "integration_tests",
    "libs/client",
    "libs/types",
]

[workspace.package]
authors = ["DFINITY Stiftung"]
edition = "2021"
repository = "https://github.com/dfinity/sol-rpc-canister"
homepage = "https://github.com/dfinity/sol-rpc-canister#readme"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
candid = "0.10.21"
candid_parser = "0.3.0"
canhttp = "0.5.0"
canlog = { version = "0.2.0", features = ["derive"] }
ciborium = "0.2.2"
const_format = "0.2.35"
derive_more = { version = "2.1.1", features = ["from", "into"] }
futures = "0.3.31"
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "*", default-features = false, features = ["custom"] }
hex = "0.4.3"
http = "1.4.0"
ic-agent = "0.45.0"
ic-agent-canister-runtime = "0.1.2"
ic-canister-runtime = "0.1.2"
ic-cdk = "0.19.0"
ic-ed25519 = "0.6.0"
ic-http-types = "0.1.0"
ic-management-canister-types = "0.5.0"
ic-metrics-assert = "0.4.0"
ic-metrics-encoder = "1.1"
ic-pocket-canister-runtime = "0.3.0"
ic-stable-structures = "0.7.2"
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2025-01-23_03-04-base" }
maplit = "1.0.2"
minicbor = { version = "1.1.0", features = ["alloc", "derive"] }
num = "0.4.3"
num-traits = "0.2.19"
pocket-ic = "12.0.0"
proptest = "1.10.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_tuple = "1.1.3"
serde_with = "3.16.1"
sol_rpc_client = { version = "4.0.0", path = "libs/client" }
sol_rpc_types = { version = "3.1.0", path = "libs/types" }
solana-account = "3.4.0"
solana-account-decoder-client-types = "3.1.8"
solana-client = "3.1.8"
solana-clock = "3.0.0"
solana-commitment-config = "3.1.0"
solana-compute-budget-interface = "3.0.0"
solana-hash = "4.1.0"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-message = "3.1.0"
solana-nonce = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-reward-info = "3.0.0"
solana-rpc-client-api = "3.1.8"
solana-sdk-ids = "3.1.0"
solana-signature = "3.2.0"
solana-signer = "3.0.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.1.0"
solana-transaction-error = "3.0.0"
solana-transaction-status-client-types = { version = ">=3.1.6, <3.2.0", features = ["agave-unstable-api"] }
spl-associated-token-account-interface = "2.0.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.49.0"
tower = "0.5.3"
tower-http = "0.6.8"
url = "2.5"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"
