[package]
name = "sol_rpc_canister"
version = "0.1.0"
description = "Interact with the Solana blockchain from the Internet Computer."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "sol_rpc_canister"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
canhttp = { workspace = true }
canlog = { path = "../canlog", features = ["derive"] }
ciborium = { workspace = true }
const_format = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sol_rpc_types = { path = "../libs/types" }
url = { workspace = true }
tower = { workspace = true, features = [ "util" ] }
zeroize = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }
proptest = { workspace = true }
