[package]
name = "sol_rpc_canister"
version = "0.1.0"
description = "Interact with the Solana blockchain from the Internet Computer."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "sol_rpc_canister"
path = "src/main.rs"

[dependencies]
assert_matches = { workspace = true }
candid = { workspace = true }
canhttp = { workspace = true, features = ["json"] }
canlog = { path = "../canlog", features = ["derive"] }
ciborium = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
ic-cdk = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-sha3 = { workspace = true }
ic-stable-structures = { workspace = true }
maplit = { workspace = true }
minicbor = { workspace = true }
num-traits = { workspace = true }
solana-clock = { workspace = true }
sol_rpc_types = { path = "../libs/types" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util"] }
url = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }
proptest = { workspace = true }