[package]
name = "sol_rpc_canister"
version = "1.3.1"
description = "Interact with the Solana blockchain from the Internet Computer."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "sol_rpc_canister"
path = "src/main.rs"

[features]
# WARNING: Disabling this feature will lead to some functionality not working anymore
#   such as decoding of Solana account data in base64+zstd format which in turn might
#   lead to some runtime errors.
zstd = ["solana-account-decoder-client-types/zstd"]
default = ["zstd"]

[dependencies]
assert_matches = { workspace = true }
candid = { workspace = true }
canhttp = { workspace = true, features = ["json", "multi"] }
canlog = { workspace = true }
ciborium = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
ic-cdk = { workspace = true }
ic-http-types = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
maplit = { workspace = true }
minicbor = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_tuple = { workspace = true }
serde_with = { workspace = true }
sol_rpc_types = { workspace = true }
solana-account = { workspace = true, features = ["serde"] }
solana-account-decoder-client-types = { workspace = true }
solana-clock = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util"] }
url = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
