[package]
name = "sol_rpc_e2e_tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sol_rpc_client = { path = "../libs/client", features = ["ed25519"] }
sol_rpc_types = { path = "../libs/types" }
sol_rpc_int_tests = { path = "../integration_tests" }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
solana-compute-budget-interface = { workspace = true }
solana-program = { workspace = true }
