[package]
name = "sol_rpc_e2e_tests"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
ic-canister-runtime = { workspace = true }
ic-error-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sol_rpc_client = { path = "../libs/client", features = ["ed25519"] }
sol_rpc_int_tests = { path = "../integration_tests" }
sol_rpc_types = { path = "../libs/types" }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
solana-compute-budget-interface = { workspace = true }
solana-program = { workspace = true }
