[package]
name = "basic_solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
bincode = { workspace = true }
bs58 = { workspace = true }
candid = { workspace = true }
canhttp = { workspace = true, features = ["json"] }
# Transitive dependency of ic-ed25519
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { workspace = true, default-features = false, features = ["custom"] }
ic-cdk = { workspace = true }
ic-ed25519 = { workspace = true }
http = { workspace = true }
num = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sol_rpc_client = { path = "../../libs/client" }
sol_rpc_types = { path = "../../libs/types" }
solana-account-decoder-client-types = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-nonce = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
