[package]
name = "basic_solana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_solana"
path = "src/main.rs"

[dependencies]
bs58 = { workspace = true }
candid = { workspace = true }
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { workspace = true, default-features = false, features = ["custom"] }
ic-cdk = { workspace = true }
ic-ed25519 = { workspace = true }
num = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sol_rpc_client = { path = "../../libs/client" }
sol_rpc_types = { path = "../../libs/types" }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }

[dev-dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-rpc-client-nonce-utils = { workspace = true }
solana-signer = { workspace = true }
