[package]
name = "sol_rpc_client"
version = "0.1.0"
description = "Client to interact with the SOL RPC canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-clock = { workspace = true }
solana-pubkey = { workspace = true }
sol_rpc_types = { path = "../types" }
strum = {workspace = true}

[dev-dependencies]
tokio = {workspace = true}