[package]
name = "sol_rpc_client"
version = "0.1.0"
description = "Client to interact with the SOL RPC canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
sol_rpc_types = { version = "0.1.0", path = "../types" }
strum = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tokio = { workspace = true, features = ["full"] }
