[package]
name = "sol_rpc_logs"
version = "0.1.0"
description = "Crate for managing canister logs"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
candid = { workspace = true }
ic-canister-log = { workspace = true }
ic-cdk = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
