[package]
name = "sol_rpc_types"
version = "0.1.0"
description = "Candid types used by the SOL RPC canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
candid = { workspace = true }
canlog = { path = "../../canlog" }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
