[package]
name = "sol_rpc_types"
version = "0.1.0"
description = "Candid types used by the SOL RPC canister"
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
bincode = { workspace = true }
base64 = { workspace = true }
candid = { workspace = true }
canlog = { workspace = true }
derive_more = { workspace = true }
ic-cdk = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-reward-info = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
solana-transaction-error = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
rand = "0.7.3"

[dev-dependencies]
proptest = { workspace = true }
