[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
bs58 = "0.5.1"
candid = "0.10.29"
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
ic-canister-runtime = "0.2.2"
ic-cdk = "0.20.0"
ic-ed25519 = "0.6.0"
num = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
sol_rpc_client = { version = "6.0.0", features = ["ed25519"] }
sol_rpc_types = "3.1.2"
solana-hash = "4.4.0"
solana-instruction = "3.3.0"
solana-message = "3.1.0"
solana-pubkey = { version = "4.1.0", features = ["curve25519"] }
solana-signature = "3.4.1"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-transaction = { version = "3.1.0", features = ["bincode"] }
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
candid = "0.10.29"
ic-management-canister-types = "0.5.0"
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2025-01-23_03-04-base" }
pocket-ic = "15.0.0"
solana-client = "3.1.14"
solana-commitment-config = "3.1.1"
solana-keypair = "3.1.2"
solana-program = "4.0.0"
solana-rpc-client-nonce-utils = "3.1.11"
solana-signer = "3.0.0"
