
[package]
name = "basic_solana"
version = "1.0.0"
edition = "2021"
[workspace]

[[bin]]
name = "basic_solana"
path = "src/main.rs"

[dependencies]
bs58 = "0.5.0"
candid = "0.10.13"
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "*", default-features = false, features = ["custom"] }
ic-cdk = "0.17.2"
ic-ed25519 = "0.2.0"
num = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
sol_rpc_client = { version = "1.0.0", features = ["ed25519"] }
sol_rpc_types = "1.0.0"
solana-hash = "2.2.0"
solana-instruction = "2.2.0"
solana-message = "2.2.0"
solana-program = "2.2.0"
solana-pubkey = "2.2.0"
solana-signature = "2.2.0"
solana-transaction = { version = "2.2.0", features = ["bincode"] }

[dev-dependencies]
candid = "0.10.13"
candid_parser = "0.1.4"
ic-management-canister-types = "0.3"
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2025-01-23_03-04-base" }
pocket-ic = "9.0.0"
solana-client = "2.2.0"
solana-commitment-config = "2.2.0"
solana-keypair = "2.2.0"
solana-rpc-client-nonce-utils = "2.2.0"
solana-signer = "2.2.0"

[patch.crates-io]
solana-account = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-account-decoder-client-types = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-client = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-clock = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-commitment-config = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-compute-budget-interface = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-hash = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-instruction = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-keypair = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-message = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-nonce = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-program = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-pubkey = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-reward-info = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-rpc-client-api = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-rpc-client-nonce-utils = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-signer = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-signature = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-transaction = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-transaction-context = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-transaction-error = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-transaction-status-client-types = { git = "https://github.com/dfinity/agave", tag = "323039e-js-feature-flag" }
solana-system-interface = { git = "https://github.com/dfinity/solana-system-program", tag = "6185b40-js-feature-flag" }
