[package]
name = "basic_solana"
version = "1.0.0"
edition = "2021"
[workspace]

[[bin]]
name = "basic_solana"
path = "src/main.rs"

[dependencies]
bs58 = "0.5.1"
candid = "0.10.14"
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { version = "*", default-features = false, features = ["custom"] }
ic-cdk = "0.17.2"
ic-ed25519 = "0.2.0"
num = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
sol_rpc_client = { version = "2.0.0", features = ["ed25519"] }
sol_rpc_types = "2.0.0"
solana-hash = "3.0.0"
solana-instruction = "3.0.0"
solana-message = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["curve25519"] }
solana-signature = "3.1.0"
solana-system-interface = "2.0.0"
solana-transaction = { version = "3.0.0", features = ["bincode"] }

[dev-dependencies]
candid_parser = "0.1.4"

[patch.crates-io]
solana-account-decoder-client-types = { git = "https://github.com/dfinity/agave", rev = "a34f5009aff8695c9a9ea402589b2863fa068329" }
solana-client = { git = "https://github.com/dfinity/agave", rev = "a34f5009aff8695c9a9ea402589b2863fa068329" }
solana-rpc-client-api = { git = "https://github.com/dfinity/agave", rev = "a34f5009aff8695c9a9ea402589b2863fa068329" }
solana-rpc-client-nonce-utils = { git = "https://github.com/dfinity/agave", rev = "a34f5009aff8695c9a9ea402589b2863fa068329" }
solana-transaction-status-client-types = { git = "https://github.com/dfinity/agave", rev = "a34f5009aff8695c9a9ea402589b2863fa068329" }

